# mango

./: .gitignore  CONTRIBUTING.rst  MANIFEST.in  README.md  README.rst  aaa.py  all-requirements.txt  bib.html  changelog.html  changelog.rst  codecov.yml  genindex.html  index.html  objects.inv  py-modindex.html  pyproject.toml  readme.html  requirements-dev.txt  requirements.txt  search.html  searchindex.js  setup.py
docs/: Makefile  make.bat  pyproject.toml
docs/decodoc/mermaid/: raw.md
docs/source/: bib.rst  conf.py  experiment_tracking.rst  index.rst  refs.bib
docs/source/changelog/: index.rst  mango_autoencoder_changelog.rst  mango_calendar_changelog.rst  mango_changelog.rst  mango_dashboard_changelog.rst  mango_genetic_changelog.rst  mango_time_series_changelog.rst
docs/source/code_autoencoder/: autoencoder.rst  autoencoder_api.rst  index.rst  utils.rst
docs/source/code_mango/: benchmark.rst  clients.rst  data.rst  decodoc.rst  index.rst  logging.rst  models.rst  plots.rst  processing.rst  shap_analysis.rst  shared.rst  table.rst  validators.rst
docs/source/code_mango_calendar/: index.rst  mango_calendar.rst
docs/source/code_mango_dashboard/: dashboards.rst  file_explorer.rst  index.rst  time_series.rst
docs/source/code_mango_genetic/: code.rst  config.rst  index.rst  individual.rst  mutation.rst
docs/source/code_mango_shap/: core_classes.rst  explainers.rst  index.rst  shap_analysis.rst  utilities.rst  visualizers.rst
docs/source/code_mango_time_series/: autoencoder.rst  dashboards.rst  features.rst  index.rst  time_series.rst  time_series_class.rst  utils.rst  validation.rst
docs/source/dev/: benchmark.rst  clients.rst  index.rst  models.rst  processing.rst
docs/source/genetic/: config.rst  crossover.rst  index.rst  individual.rst  introduction.rst  mutation.rst  population.rst  replacement.rst  selection.rst  stop.rst  usage.rst
mango/: MANIFEST.in  README.rst  __init__.py  aaa.py  changelog.rst  pyproject.toml  requirements-dev.txt  requirements.txt
mango/benchmark/optimization/: __init__.py  ackley.py  bukin.py  cross_in_tray.py  dolan.py  drop_wave.py  egg_holder.py  gramacy_lee.py  griewank.py  holder_table.py  langermann.py  levy.py  rastrigin.py  rosenbrock.py  schaffer.py  schwefel.py
mango/cli/: __init__.py
mango/clients/: aemet.py  arcgis.py  email_downloader.py  rest_client.py
mango/config/: base_config.py
mango/dashboards/: __init__.py  file_explorer_app.py  file_explorer_handlers.py
mango/dashboards/dash_file_explorer_app/: app.py
mango/data/: __init__.py  calendar_data.py  series_correlations.py
mango/images/: images_functions.py
mango/logging/: __init__.py  chrono.py  decorators.py  logger.py
mango/mango/: __init__.py
mango/mango/clients/: aemet.py  arcgis.py  catastro.py  cloud_storage.py  email_downloader.py  email_sender.py  geoanalytics_catastro_ine.py  google_cloud_storage.py  ine.py  ine_catastro_mapper.py  mitma.py  mitma_ine_mapper.py  rest_client.py
mango/mango/config/: __init__.py  base_config.py
mango/mango/dashboards/: __init__.py  file_explorer_app.py  time_series_app.py
mango/mango/data/: __init__.py  calendar_data.py  energy_prices.csv
mango/mango/decodoc/: __init__.py  decodoc.py
mango/mango/logging/: __init__.py  chrono.py  decorators.py  logger.py
mango/mango/models/: __init__.py  activations.py  neural_networks.py  pyomo.py
mango/mango/plots/: __init__.py  plots.py
mango/mango/processing/: __init__.py  data_imputer.py  date_functions.py  file_functions.py  imputer.py  mango_imputer.py  object_functions.py  processing_time_series.py
mango/mango/shap_analysis/: __init__.py  const.py  shap_analysis.py
mango/mango/shared/: __init__.py  const.py  decorators.py  requirement_check.py  spatial.py
mango/mango/table/: pytups_table.py  pytups_tools.py  table_tools.py
mango/models/: __init__.py  causal_impact.py  enums.py  experiment_tracking.py  metrics.py  neural_networks.py  pyomo.py
mango/models/genetic/: const.py
mango/plots/: file_explorer_app.py  plots.py
mango/processing/: __init__.py  date_functions.py  date_functions_2.py  file_functions.py  images_functions.py  object_functions.py  processing_time_series.py
mango/pyomo/: pyomo_tools.py
mango/shap_analysis/: shap_analysis.py
mango/shared/: __init__.py  const.py  decorators.py  exceptions.py  requirement_check.py  spatial.py
mango/table/: __init__.py  pytups_table.py  pytups_tools.py  table_tools.py
mango/tests/: const.py  test_aemet_client.py  test_arcgis_client.py  test_config.py  test_date_functions.py  test_date_functions_2.py  test_file_functions.py  test_images.py  test_logging.py  test_models.py  test_object_functions.py  test_processing_time_series.py  test_table.py  test_tools.py  test_validation.py
mango/tests/clients_module/: test_aemet_client.py  test_rest_client.py
mango/tests/config_module/: test_config.py
mango/tests/data/: json_dataset.json  result.json  (+16 more)
mango/validators/: aemet.py  arcgis.py
mango_autoencoder/: README.md  README.rst  __init__.py  changelog.rst  pyproject.toml  run_autoencoder_acciona.py
mango_autoencoder/mango_autoencoder/: autoencoder.py
mango_autoencoder/tests/: test_autoencoder.py
mango_calendar/: README.md  README.rst  TODO.md  __init__.py  changelog.rst  pyproject.toml  run_tests.py
mango_calendar/mango_calendar/: __init__.py  calendar_features.py  date_utils.py
mango_calendar/tests/: __init__.py  test_date_utils.py  test_init.py
mango_dashboard/: README.md  README.rst  changelog.rst  pyproject.toml
mango_genetic/: README.md  README.rst  changelog.rst  pyproject.toml
mango_genetic/mango_genetic/: const.py
mango_shap/: LICENSE  README.rst  __init__.py  changelog.rst  example_usage.py  pyproject.toml
mango_shap/mango_shap/: __init__.py  const.py  explainer.py
mango_shap/tests/: test_explainer.py
mango_time_series/: MANIFEST.in  README.md  README.rst  changelog.rst  pyproject.toml  requirements.txt  script_MSTL.py  script_TBATS.py  script_aLGBM.py  script_nLGBM.py  script_nbeats.py
mango_time_series/mango_time_series/: __init__.py
(+428 files in other folders)
