[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "mango"
version = "0.2.0"
authors = [
    {name = "baobab soluciones", email = "mango@baobabsoluciones.es"}
]
description = "Library with a collection of usefull classes and methods to DRY"
readme = "README.rst"
urls = {repository = "https://github.com/baobabsoluciones/mango"}
license = {text = "Apache Software License"}
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Development Status :: 4 - Beta",
]
dependencies = [
    "certifi<=2023.7.22",
    "charset-normalizer<=3.3.0",
    "et-xmlfile<=1.1.0",
    "fastjsonschema<=2.18.1",
    "idna<=3.4",
    "numpy<=1.26.1",
    "openpyxl<=3.1.2",
    "pydantic<=2.4.2",
    "python-dateutil<=2.8.2",
    "pytups<=0.86.2",
    "pytz<=2023.3.post1",
    "requests<=2.31.0",
    "six<=1.16.0",
    "tqdm<=4.66.1",
    "urllib3<=2.0.7",
    "XlsxWriter<=3.1.9"
]
requires-python = ">=3.8"

[tools.setuptools]
include-package-data = true

[tool.setuptools.packages]
find = {}

[project.optional-dependencies]
cli = ["click<=8.1.7"]

data = [
    "pandas<=2.0.3",
    "holidays<=0.35.0",
    "pycountry<=22.3.5",
    "unidecode<=1.3.7",
    "tabulate<=0.9.0"
]

dashboard = [
    "streamlit<=1.28.1",
    "pandas==2.0.3",
    "plotly<=5.17.0"
]

gcloud = ["google-cloud-storage<=2.12.0"]

models = [
    "pyomo<=6.6.2"
]

plot = [
    "beautifulsoup4<=4.12.2",
    "pandas<=2.0.3",
    "plotly<=5.17.0"
]

shap = ["shap[plots]==0.43.0"]

[project.scripts]
mango = "mango.cli:cli"
