[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "mango-docs"
version = "0.1.0"
description = "Documentation for Mango library"
authors = [
    { name = "baobab soluciones", email = "mango@baobabsoluciones.es" }
]
urls = {repository = "https://github.com/baobabsoluciones/mango"}
license = {text = "Apache Software License"}
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Development Status :: 4 - Beta",
]

requires-python = ">=3.10"
dependencies = [
    "sphinx==7.2.6",
    "sphinxcontrib-bibtex>=2.6.5,<3.0.0",
    "shibuya>=2025.7.24,<2026.0.0",
]

[project.optional-dependencies]
dev = [
    "coverage[toml]>=7.0",
]

