[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "mango"
version = "0.3.0a7"
authors = [
    {name = "baobab soluciones", email = "mango@baobabsoluciones.es"}
]
description = "Library with a collection of usefull classes and methods to DRY"
readme = "README.rst"
urls = {repository = "https://github.com/baobabsoluciones/mango"}
license = {text = "Apache Software License"}
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Development Status :: 4 - Beta",
]
dependencies = [
    "certifi>=2023.7.22,<2024.0.0",
    "charset-normalizer>=3.3.0,<4.0.0",
    "et-xmlfile>=1.1.0,<2.0.0",
    "fastjsonschema>=2.18.1,<3.0.0",
    "idna>=3.4,<4.0.0",
    "numpy>=1.24.4,<2.0.0",
    "openpyxl>=3.1.2,<4.0.0",
    "pydantic>=2.4.2,<3.0.0",
    "python-dateutil>=2.8.2,<3.0.0",
    "pytups>=0.86.2,<1.0.0",
    "pytz>=2023.3.post1,<2024.0.0",
    "requests>=2.31.0,<3.0.0",
    "six>=1.16.0,<2.0.0",
    "tqdm>=4.66.1,<5.0.0",
    "urllib3>=2.0.7,<3.0.0",
    "XlsxWriter>=3.1.9,<4.0.0"
]
requires-python = ">=3.8"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]
include = ["mango", "mango.*"]


[project.optional-dependencies]
cli = ["click>=8.1.7,<9.0.0"]

data = [
    "pandas>=2.0.3,<3.0.0",
    "polars>=1.0.0, <2.0.0",
    "holidays>=0.35.0,<1.0.0",
    "pycountry>=22.3.5,<23.0.0",
    "scikit-learn>=1.3.2,<2.0.0",
    "unidecode>=1.3.7,<2.0.0",
    "tabulate>=0.9.0,<1.0.0"
]

dashboard = [
    "streamlit>=1.28.1,<2.0.0",
    "pandas>=2.0.3,<3.0.0",
    "plotly>=5.17.0,<6.0.0"
]

gcloud = ["google-cloud-storage>=2.12.0,<3.0.0"]

models = [
    "pyomo>=6.6.2,<7.0.0"
]

plot = [
    "beautifulsoup4>=4.12.2,<5.0.0",
    "pandas>=2.0.3,<3.0.0",
    "plotly>=5.17.0,<6.0.0"
]

shap = ["shap[plots]==0.43.0"]

[project.scripts]
mango = "mango.cli:cli"
