[build-system]
requires = ["setuptools>=69", "setuptools_scm"]
build-backend = "setuptools.build_meta"

[project]
name = "mango"
dynamic = ["version"]
description = "Library with a collection of useful classes and methods to DRY"
authors = [
    {name = "baobab soluciones", email = "mango@baobabsoluciones.es"}
]

readme = "README.rst"
urls = {repository = "https://github.com/baobabsoluciones/mango"}
license = {text = "Apache Software License"}
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Development Status :: 4 - Beta",
]

requires-python = ">=3.10"
dependencies = [
    "certifi>=2023.7.22,<2024.0.0",
    "charset-normalizer>=3.3.0,<4.0.0",
    "et-xmlfile>=1.1.0,<2.0.0",
    "fastjsonschema>=2.18.1,<3.0.0",
    "idna>=3.4,<4.0.0",
    "numpy>=1.24.4,<2.0.0",
    "openpyxl>=3.1.2,<4.0.0",
    "pydantic>=2.4.2,<3.0.0",
    "python-dateutil>=2.8.2,<3.0.0",
    "pytups>=0.86.2,<1.0.0",
    "pytz>=2023.3.post1,<2024.0.0",
    "requests>=2.31.0,<3.0.0",
    "six>=1.16.0,<2.0.0",
    "tqdm>=4.66.1,<5.0.0",
    "urllib3>=2.0.7,<3.0.0",
    "XlsxWriter>=3.1.9,<4.0.0",
    "pandas>=2.0.3,<3.0.0",
    "polars>=1.0.0, <2.0.0",
    "scikit-learn>=1.3.2,<2.0.0",
    "pyomo>=6.6.2,<7.0.0",
    "tomli>=2.0.1,<3.0.0; python_version < \"3.11\""
]

[project.optional-dependencies]
dev = [
    "coverage[toml]>=7.0",
]

[tool.setuptools_scm]
root = ".."
version_scheme = "post-release"
local_scheme = "node-and-date"
tag_regex = "^mango(?P<version>\\d+\\.\\d+\\.\\d+(?:[abc]\\d+|rc\\d+)?)$"

[tool.setuptools.packages.find]
where = ["."]
include = ["mango"]
exclude = ["tests*"]

[tool.setuptools]
include-package-data = true


[tool.ruff]
line-length = 88
target-version = "py312"
exclude = [".venv", "__pycache__"]

[tool.ruff.lint]
select = [
    "E",   # Style errors (PEP 8)
    "F",   # Undefined variables
    "UP",  # Modern syntax (auto-upgrade)
    "I",   # Import order (isort)
    "D",   # Docstrings (PEP 257)
    "N",   # Correct naming
    "B",   # Possible bugs
    "C90", # Code complexity
    "A",   # Use of reserved names
    "T20", # Print and debugger in production
    "ANN", # Force typehints
    "D"    # Force Docstrings
]
ignore = [
    "D203",  # Blank line before class docstring
    "D213",  # Multi-line docstring summary should start on the second line
    "D400",  # First line should end with period, question mark or exclamation
    "B028",  # No explicit 'stacklevel' argument found
    "ANN401" # Dynamic type expressions (typing.Any) not allowed
]

[tool.ruff.lint.pydocstyle]
convention = "pep257"

[tool.coverage.run]
source = ["mango"]
omit = ["tests/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
]

