[project]
name = "mango-calendar"
version = "0.1.0"
description = "Library with a collection of usefull classes and methods to DRY"
authors = [
    {name = "baobab soluciones", email = "mango@baobabsoluciones.es"}
]

readme = "README.md"
urls = {repository = "https://github.com/baobabsoluciones/mango"}
license = {text = "Apache Software License"}
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Development Status :: 4 - Beta",
]

requires-python = ">=3.12"
dependencies = [
    "holidays>=0.76",
    "numpy>=2.3.1",
    "pandas>=2.3.1",
    "polars>=1.31.0",
    "pyarrow>=20.0.0",
    "pycountry>=24.6.1",
    "unidecode>=1.4.0",
]


[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"


[tool.hatchling.build.targets.wheel]
packages = ["mango_calendar"]

[tool.hatchling.build.targets.sdist]
include = [
    "LICENSE",
]
exclude = [
    "tests/",
    "run_tests.py",
]


[tool.ruff]
line-length = 88
target-version = "py312"
exclude = [".venv", "__pycache__"]

[tool.ruff.lint]
select = [
    "E",   # Errores de estilo (PEP 8)
    "F",   # Variables sin definir
    "UP",  # Sintaxis moderna (auto-upgrade)
    "I",   # Orden de imports (isort)
    "D",   # Docstrings (PEP 257)
    "N",   # Nombres correctos
    "B",   # Posibles bugs
    "C90", # Complejidad del código
    "A",   # Uso de nombres reservados
    "T20", # Print y debugger en producción
    "ANN", # Forzar typehints
    "D"    # Forzar Docstrings
]
ignore = [
    "D203",  # Línea en blanco antes del docstring de clase
    "D213",  # El resumen del docstring multilínea debe comenzar en la segunda línea
    "D400",  # La primera línea debe terminar con punto, interrogación o exclamación
    "B028",  # No se encontró el argumento explícito 'stacklevel'
    "ANN401" # No se permiten expresiones con tipos dinámicos (typing.Any)
]

[tool.ruff.lint.pydocstyle]
convention = "pep257"

