[build-system]
requires = ["setuptools>=69", "setuptools_scm"]
build-backend = "setuptools.build_meta"

[project]
name = "mango-shap"
dynamic = ["version"]
description = "Library with SHAP (SHapley Additive exPlanations) utilities for model interpretability"
authors = [
    {name = "baobab soluciones", email = "mango@baobabsoluciones.es"}
]

readme = "README.rst"
urls = {repository = "https://github.com/baobabsoluciones/mango"}
license = {text = "Apache Software License"}
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Development Status :: 4 - Beta",
]

requires-python = ">=3.10"
dependencies = [
    "mango>=1.0.0,<2.0.0",
    "shap>=0.45.0,<1.0.0",
    "numpy>=1.24.4,<2.0.0",
    "pandas>=2.0.3,<3.0.0",
    "matplotlib>=3.7.0,<4.0.0",
    "seaborn>=0.12.0,<1.0.0",
    "plotly>=5.15.0,<6.0.0",
    "scikit-learn>=1.3.2,<2.0.0",
    "xgboost>=1.7.0,<2.0.0",
    "lightgbm>=4.0.0,<5.0.0",
    "catboost>=1.2.0,<2.0.0",
]

[project.optional-dependencies]
dev = [
    "coverage[toml]>=7.0",
]

[tool.setuptools_scm]
root = ".."
version_scheme = "post-release"
local_scheme = "node-and-date"
tag_regex = "^shap(?P<version>\\d+\\.\\d+\\.\\d+(?:[abc]\\d+|rc\\d+)?)$"
git_describe_command = "git describe --dirty --tags --long --match 'shap*'"

[tool.setuptools.packages.find]
where = ["."]
include = ["mango_shap*"]
exclude = ["tests*"]

[tool.setuptools]
include-package-data = true


[tool.ruff]
line-length = 88
target-version = "py312"
exclude = [".venv", "__pycache__"]

[tool.ruff.lint]
select = [
    "E",   # Style errors (PEP 8)
    "F",   # Undefined variables
    "UP",  # Modern syntax (auto-upgrade)
    "I",   # Import order (isort)
    "D",   # Docstrings (PEP 257)
    "N",   # Correct naming
    "B",   # Possible bugs
    "C90", # Code complexity
    "A",   # Use of reserved names
    "T20", # Print and debugger in production
    "ANN", # Force typehints
    "D"    # Force Docstrings
]
ignore = [
    "D203",  # Blank line before class docstring
    "D213",  # Multi-line docstring summary should start on the second line
    "D400",  # First line should end with period, question mark or exclamation
    "B028",  # No explicit 'stacklevel' argument found
    "ANN401" # Dynamic type expressions (typing.Any) not allowed
]

[tool.ruff.lint.pydocstyle]
convention = "pep257"

[tool.coverage.run]
source = ["mango_shap"]
omit = ["tests/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
]
