[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "mango-time-series"
version = "0.0.1a1"
authors = [
    {name = "baobab soluciones", email = "mango@baobabsoluciones.es"}
]
description = "Library with a collection of usefull classes and methods for time series"
readme = "README.rst"
urls = {repository = "https://github.com/baobabsoluciones/mango"}
license = {text = "Apache Software License"}
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Development Status :: 4 - Beta",
]
dependencies = []
requires-python = ">=3.8"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]
include = ["mango", "mango.*"]


[project.optional-dependencies]



