[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "mango-time-series"
version = "0.3.0a7"
authors = [
    {name = "baobab soluciones", email = "mango@baobabsoluciones.es"}
]

description = "Library with a collection of usefull classes and methods for time series"
readme = "README.rst"
urls = {repository = "https://github.com/baobabsoluciones/mango"}
license = {text = "Apache Software License"}
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Development Status :: 4 - Beta",
]
dependencies = [
    "pandas>=2.0.3,<3.0.0",
    "numpy>=1.24.4,<2.0.0",
    "polars>=1.8.2, <2.0.0",
    "scipy>=1.10.1, <2.0.0",
    "statsmodels>=0.14.1, <1.0.0",
    "mango[data]==0.3.0a4",
    "pyarrow>=17.0.0, <19.0.0",
    "streamlit_date_picker>=0.0.5, <0.1.0",
    "Jinja2>=3.1.4, <4.0.0",
    "statsforecast>=1.7.8, <2.0.0",
    "tensorflow>=2.18.0, <3.0.0"
]
requires-python = ">=3.9"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]
include = ["mango_time_series", "mango_time_series.*"]


[project.optional-dependencies]



