[build-system]
requires = ["setuptools>=69", "setuptools_scm"]
build-backend = "setuptools.build_meta"

[project]
name = "mango-time-series"
dynamic = ["version"]
description = "Library with a collection of useful classes and methods to DRY"
authors = [
    {name = "baobab soluciones", email = "mango@baobabsoluciones.es"}
]

readme = "README.rst"
urls = {repository = "https://github.com/baobabsoluciones/mango"}
license = {text = "Apache Software License"}
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Development Status :: 4 - Beta",
]

requires-python = ">=3.10"
dependencies = [
    "pandas>=2.0.3,<3.0.0",
    "numpy>=1.24.4,<2.0.0",
    "polars>=1.8.2,<2.0.0",
    "scipy>=1.10.1,<2.0.0",
    "statsmodels>=0.14.1,<1.0.0",
    "mango>=1.0.0,<2.0.0",
    "scikit-learn>=1.6.1,<2.0.0",
    "pyarrow>=21.0.0,<22.0.0",
]

[project.optional-dependencies]
dev = [
    "coverage[toml]>=7.0",
]

[tool.setuptools_scm]
root = ".."
version_scheme = "post-release"
local_scheme = "node-and-date"
tag_regex = "^ts(?P<version>\\d+\\.\\d+\\.\\d+(?:[abc]\\d+|rc\\d+)?)$"
git_describe_command = "git describe --dirty --tags --long --match 'ts*'"

[tool.setuptools.packages.find]
where = ["."]
include = ["mango_time_series", "mango_time_series*"]
exclude = ["tests*"]

[tool.setuptools]
include-package-data = true


[tool.ruff]
line-length = 88
target-version = "py312"
exclude = [".venv", "__pycache__"]

[tool.ruff.lint]
select = [
    "E",   # Style errors (PEP 8)
    "F",   # Undefined variables
    "UP",  # Modern syntax (auto-upgrade)
    "I",   # Import order (isort)
    "D",   # Docstrings (PEP 257)
    "N",   # Correct naming
    "B",   # Possible bugs
    "C90", # Code complexity
    "A",   # Use of reserved names
    "T20", # Print and debugger in production
    "ANN", # Force typehints
    "D"    # Force Docstrings
]
ignore = [
    "D203",  # Blank line before class docstring
    "D213",  # Multi-line docstring summary should start on the second line
    "D400",  # First line should end with period, question mark or exclamation
    "B028",  # No explicit 'stacklevel' argument found
    "ANN401" # Dynamic type expressions (typing.Any) not allowed
]

[tool.ruff.lint.pydocstyle]
convention = "pep257"

[tool.coverage.run]
source = ["mango_time_series"]
omit = ["tests/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
]

